fixed alignment text overlay box Portfolio page

--- a/assets/css/stylePort.css
+++ b/assets/css/stylePort.css
@@ -81,7 +81,7 @@ h5 {
 	font-family: "Georgia",Times New Roman,Times,serif;
 	font-size: 18px;
 	color: white;
-	width: 100%;
+	width: 250px;
 	z-index: 1;
 }
 
@@ -244,6 +244,7 @@ ul {
 li {
 	display: inline;
 	position: relative;
+	vertical-align: left;
 	top: 0px;
 	left: 0px;
 
